cluster/agentgateway/routes/lmstudio-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: lmstudio
  namespace: agentgateway
spec:
  parentRefs:
    - name: internal-noauth
      namespace: agentgateway
  hostnames:
    - inference.sko.ai
  rules:
  - backendRefs:
    - name: lmstudio
      namespace: agentgateway
      group: agentgateway.dev
      kind: AgentgatewayBackend
